--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,10 @@
 			
 			<h1>Productos</h1>
 
+			<div>
+				<%= link_to "Publicar producto", new_product_path, class: "btn btn-primary" %>
+			</div>
+
 			<table class="table">
 				<tr>
 					<th>Id</th>
